# dft-learn

./: .gitignore  AGENTS.md  CITATION.cff  README.md  bb_model.ipynb  install.ps1  prototype.ipynb  pyproject.toml  spectral_analysis.ipynb  testing.ipynb
.cursor/agents/: dotagent-general-standards-auditor.md  dotagent-python-python-refactor.md  dotagent-python-python-reviewer.md  dotagent-python-python-types.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/rules/: dotagent-general-conduct.mdc  dotagent-general-learning-and-tools.mdc  dotagent-general-library-documentation.mdc  dotagent-python-base.mdc
.cursor/skills/dataframes/: SKILL.md
.cursor/skills/general/: SKILL.md
.cursor/skills/general-python/: SKILL.md
.cursor/skills/lab-instrumentation/: SKILL.md
.cursor/skills/matplotlib-scientific/: SKILL.md
.cursor/skills/numpy-docstrings/: SKILL.md
.cursor/skills/numpy-scientific/: SKILL.md
.cursor/skills/stobe-pro/: SKILL.md
.cursor/skills/stobe-pro/references/: StoBeMAN.html  basis-sets.md  baslib.new7  calculation-workflows.md  examples-catalog.md  input-file-format.md  output-files.md  quick-reference.md  run-scripts.md  symbasis.new  symmetry.md  xray-spectroscopy.md
DFT_Clustering/: FilteringMain.ipf  alphaModeling.ipf
Python Helpers/: StoBe_Input_Generator.py
docs/: StoBeMAN.html
docs/stobe/example-run/znpc-default/: geometry.xyz  molConfig.py
igor/: README.md
igor/Igor Procedures/: clusteringPanel v1.ipf
igor/User Procedures/: ClusteringProcs.ipf  FilteringWrapper.ipf  alphaModeling.ipf  makeBareAtomAbsorption.ipf  sequentialThresholding.ipf
notebooks/: Model vs Exp CuI for hdh.h5xp  Model vs Exp Si for hdh.h5xp  building beta from scratch.ipynb  cov.csv  errors.csv  fixing normalization problems.ipynb  names.csv  params.csv  params_final.csv  params_initial.csv  proper-xyz.xyz  si_angular_dependence.ipynb  zyx-vis.ipynb
notebooks/cupc/: Model vs Exp for hdh.h5xp  bb_model.ipynb  cos_fitting.ipynb  covariance.ipynb  label_fix.ipynb  nexafs_comparison.ipynb  testing.ipynb  working.ipynb
notebooks/tcta/: optical constant analysis.ipynb
output/: combined_data.nc  exc.nc  geometry.nc  gnd.nc  tp.nc
python_pipeline/: README.md  nexafs_analyzer.py  ps_compare.ipynb  ps_rotated.ipynb
scripts/: ISSUES_AND_REMEDIATIONS.md  README.md  StoBe_Input_Generator.py  demo_stobe_datatree.py  generate.py  prepare_test_data.py  schedule.py  test_stobe.py  xyz_utils.py
src/dft_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dftlearn/: __init__.py
src/dftlearn/_backends/: __init__.py  cpu.py  dispatch.py  gpu.py
src/dftlearn/analysis/: __init__.py  clustering.py  overlap.py
src/dftlearn/cli/: __init__.py  __main__.py  build.py  config.py  main.py  postprocess.py  run.py  shared.py
src/dftlearn/cli/_deprecated/: __init__.py  generate.py  schedule.py
src/dftlearn/fitting/: __init__.py
src/dftlearn/io/: __init__.py  datatree.py  stobe.py  stobe_final_energy.py  stobe_orbital_table.py  stobe_scf_convergence.py  xray_out.py  xyz_structure.py
src/dftlearn/pipeline/: __init__.py  estimators.py
src/dftlearn/preprocessing/: __init__.py  transformers.py
src/dftlearn/python_pipeline/: README.md  multiSpecFitProcs.py  plotUtils.py  ps.ipynb  stepEdgeProcs.py  stobeLoader.py
src/dftlearn/visualization/: __init__.py  scf_diagnostics_figure.py  stobe_final_energy_figure.py  stobe_orbital_energy_summary_figure.py  xas_site_figure.py  xyz_wireframe.py
streamlit_demo/: stobe_loader.py
tests/: conftest.py  test_stobe_final_energy.py  test_stobe_scf_convergence.py  test_xray_out.py  test_xyz_structure.py
tests/fixtures/stobe_minimal/: minimal.xyz  molConfig.py  stobe_minimal_20260129131803.txt  stobe_minimal_20260129131820.txt  stobe_minimal_20260129132216.txt
tests/output/: atomic_coordinates.parquet  basis_sets.parquet  energy_results.parquet  orbital_alpha.parquet  orbital_beta.parquet  xray_transitions.parquet
tests/output/NEXAFS/: C1.out
tests/unit/: test_backends.py  test_clustering.py  test_overlap.py  test_preprocessing.py
(+113 files in other folders)
